tests/NormalTests/paczka1/fuzzy1/19416713.err
Error in line 6: S288 S288 29,4
Error in line 7: S288 S500 64,1
Error in line 14: S288 S889 4,3
Error in line 10: bhXRqh3poU S288 62,6
Error in line 5: nw2fjfD S889 5,1
Error in line 29: ltrP S500 53,3
Error in line 36: rrWQMF09l S500 28,5
